New contact page, and updated info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<title>Ty The Garden Guy</title>
 </head>
 
-
 <body>
 
 	<div class="header">
@@ -89,11 +88,65 @@
 	</div>
 
 	<!-- these should probably be in a grid format -->
-	<div class="tiktok-videos">
-		<!-- TikTok embed code -->
-		<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tythegardenguy/video/7182920084262898987" data-video-id="7182920084262898987" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tythegardenguy" href="https://www.tiktok.com/@tythegardenguy?refer=embed">@tythegardenguy</a> Join me live😁 <a title="live" target="_blank" href="https://www.tiktok.com/tag/live?refer=embed">#live</a> <a title="durianfruit" target="_blank" href="https://www.tiktok.com/tag/durianfruit?refer=embed">#durianfruit</a> <a title="firsttime" target="_blank" href="https://www.tiktok.com/tag/firsttime?refer=embed">#firsttime</a> <a title="exoticfruits" target="_blank" href="https://www.tiktok.com/tag/exoticfruits?refer=embed">#exoticfruits</a> <a title="tytries" target="_blank" href="https://www.tiktok.com/tag/tytries?refer=embed">#tytries</a> <a target="_blank" title="♬ original sound - WanderingAndLost" href="https://www.tiktok.com/music/original-sound-7074766730593078059?refer=embed">♬ original sound - WanderingAndLost</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
-		<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tythegardenguy/video/7179622164033981742" data-video-id="7179622164033981742" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tythegardenguy" href="https://www.tiktok.com/@tythegardenguy?refer=embed">@tythegardenguy</a> Replying to @thefitfoodiegardener <a target="_blank" title="♬ Pretty Girl Era - LU KALA" href="https://www.tiktok.com/music/Pretty-Girl-Era-7127800191360551686?refer=embed">♬ Pretty Girl Era - LU KALA</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>	
-		<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tythegardenguy/video/7178557653344374058" data-video-id="7178557653344374058" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tythegardenguy" href="https://www.tiktok.com/@tythegardenguy?refer=embed">@tythegardenguy</a> 🐩 or 🐈  let me know in the comments which is better and why <a title="strudelthegoldendoodle" target="_blank" href="https://www.tiktok.com/tag/strudelthegoldendoodle?refer=embed">#strudelthegoldendoodle</a> <a title="sorrelsoup" target="_blank" href="https://www.tiktok.com/tag/sorrelsoup?refer=embed">#sorrelsoup</a> <a title="chickenlife🐓" target="_blank" href="https://www.tiktok.com/tag/chickenlife%F0%9F%90%93?refer=embed">#chickenlife🐓</a> <a target="_blank" title="♬ Thunder Sound - Tmsoft&#39;s White Noise Sleep Sounds" href="https://www.tiktok.com/music/Thunder-Sound-6755226794120448002?refer=embed">♬ Thunder Sound - Tmsoft&#39;s White Noise Sleep Sounds</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+	<!-- Add the TikTok videos in the body of your HTML document -->
+	<!-- Add a container element for the TikTok videos -->
+	<div class="tiktok-slider">
+		<!-- Add a left arrow button -->
+		<button class="tiktok-slider-button left">&#8592;</button>
+		
+		<!-- Add a container element for each TikTok video -->
+		<div class="tiktok-video">
+			<!-- TikTok embed code -->
+			<div>
+			<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tythegardenguy/video/7145067383068167470" data-video-id="7145067383068167470" style="max-width: 605px;min-width: 325px;">
+			<section>
+				<a target="_blank" title="@tythegardenguy" href="https://www.tiktok.com/@tythegardenguy?refer=embed">@tythegardenguy</a> Want to grow food? <a title="howtogrowfood" target="_blank" href="https://www.tiktok.com/tag/howtogrowfood?refer=embed">#howtogrowfood</a> Rich soil is the key to success <a title="richsoil" target="_blank" href="https://www.tiktok.com/tag/richsoil?refer=embed">#richsoil</a> <a title="springgarden2023" target="_blank" href="https://www.tiktok.com/tag/springgarden2023?refer=embed">#springgarden2023</a> <a target="_blank" title="♬ Nature Love - Nature Sounds" href="https://www.tiktok.com/music/Nature-Love-6736016472558012418?refer=embed">♬ Nature Love - Nature Sounds</a>
+			</section>
+		</blockquote>
+		<script async src="https://www.tiktok.com/embed.js"></script></div>
+		</div>
+		<div class="tiktok-video">
+			<!-- TikTok embed code -->
+			<div class="tiktok-video">
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tythegardenguy/video/7137993436581367082" data-video-id="7137993436581367082" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tythegardenguy" href="https://www.tiktok.com/@tythegardenguy?refer=embed">@tythegardenguy</a> Replying to @user64543246279403 Also, right now is the time to get your spring garden ready! (Yes you read that right) <a title="beginnergardenertips" target="_blank" href="https://www.tiktok.com/tag/beginnergardenertips?refer=embed">#beginnergardenertips</a> <a title="controlweeds" target="_blank" href="https://www.tiktok.com/tag/controlweeds?refer=embed">#controlweeds</a> <a title="bestgardenhack" target="_blank" href="https://www.tiktok.com/tag/bestgardenhack?refer=embed">#bestgardenhack</a> <a target="_blank" title="♬ original sound - Ty The Garden Guy" href="https://www.tiktok.com/music/original-sound-7137993371418643242?refer=embed">♬ original sound - Ty The Garden Guy</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script> 
+</div>
+		<div class="tiktok-video">
+			<!-- TikTok embed code -->
+			<div>
+			<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@tythegardenguy/video/7120763854312951086" data-video-id="7120763854312951086" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@tythegardenguy" href="https://www.tiktok.com/@tythegardenguy?refer=embed">@tythegardenguy</a> Thanks @grubblyfarms for letting us try the fresh pecks sustainable chicken feed! <a title="grubblyhappyhour" target="_blank" href="https://www.tiktok.com/tag/grubblyhappyhour?refer=embed">#grubblyhappyhour</a> <a title="grubblyfarms" target="_blank" href="https://www.tiktok.com/tag/grubblyfarms?refer=embed">#grubblyfarms</a> <a title="backyardchickens" target="_blank" href="https://www.tiktok.com/tag/backyardchickens?refer=embed">#backyardchickens</a> <a target="_blank" title="♬ original sound - Ty The Garden Guy" href="https://www.tiktok.com/music/original-sound-7120763836864547627?refer=embed">♬ original sound - Ty The Garden Guy</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script></div>
+		</div>
+		
+		<!-- Add a right arrow button -->
+		<button class="tiktok-slider-button right">&#8594;</button>
 	</div>
+	<script>
+	// Get the TikTok slider container element
+	const tiktokSlider = document.querySelector('.tiktok-slider');
+
+	// Get the left arrow button
+	const leftButton = tiktokSlider.querySelector('.left');
+
+	// Get the right arrow button
+	const rightButton = tiktokSlider.querySelector('.right');
+
+	// Add a click event listener to the left arrow button
+	leftButton.addEventListener('click', () => {
+		// Get the current position of the TikTok videos
+		const currentPosition = tiktokSlider.scrollLeft;
+		
+		// Scroll the TikTok videos to the left by 300px (the width of each TikTok video)
+		tiktokSlider.scrollTo({ left: currentPosition - 300, behavior: 'smooth' });
+	});
+
+	// Add a click event listener to the right arrow button
+	rightButton.addEventListener('click', () => {
+		// Get the current position of the TikTok videos
+		const currentPosition = tiktokSlider.scrollLeft;
+		
+		// Scroll the TikTok videos to the right by 300px (the width of each TikTok video)
+		tiktokSlider.scrollTo({ left: currentPosition + 300, behavior: 'smooth' });
+	});
+	</script>
+
 </body>
 </html>
