Fixed TT videos added cookies popup

--- a/contact.html
+++ b/contact.html
@@ -5,24 +5,12 @@
 	<link href="styleReset.css" rel="stylesheet" type="text/css">
 	<link href="StyleSheet.css" rel="stylesheet" type="text/css">
 	<title>Ty The Garden Guy</title>
-	<meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <title>jQuery UI Datepicker - Default functionality</title>
-	  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-	  <link rel="stylesheet" href="/resources/demos/style.css">
-	  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-	  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-	  <script>
-	  $( function() {
-		$( "#datepicker" ).datepicker();
-	  } );
-	  </script>
-	  <title>Pull the Weeds</title>
 </head>
 
 <!-- you may want to handle this as a series of HTML pages -->
 <body>
-
+	<header id="header">
+	<div id="header-content">
 	<div class="header">
 		<div class="tabs">
 		    <ul class="nav">
@@ -39,6 +27,8 @@
 			<button>Go</button>
 		</div>
 	</div>
+	</div>
+	</header>
 	<!-- Contact page layout -->
 <div class="contact-page">
 	<!-- Page heading -->
