--- a/products.html
+++ b/products.html
@@ -9,7 +9,8 @@
 
 <!-- you may want to handle this as a series of HTML pages -->
 <body>
-
+	<header id="header">
+	<div id="header-content">
 	<div class="header">
 		<div class="tabs">
 		    <ul class="nav">
@@ -19,12 +20,14 @@
 				<li class="tab"><a href="contact.html">Contact</a></li>
             </ul>
 		</div>
-
+		
 		<!-- search bar may not work -->
 		<div class="search-bar">
 			<input type="text" placeholder="Search...">
 			<button>Go</button>
 		</div>
+		</div>
+		</header>
 	<!-- Add the shopping cart icon -->
 	<i class="fa fa-shopping-cart" aria-hidden="true" data-total="0"></i>
 
@@ -191,6 +194,7 @@ Listing is for 4, 8 or 12 - 1 inch roots
 							}
 						});
 					</script>
+			
 			</form>
 			</div>
 			
