--- a/products.html
+++ b/products.html
@@ -4,6 +4,8 @@
 <head>
 	<link href="StyleSheet.css" rel="stylesheet" type="text/css">
 	<link href="StyleSheet.css" rel="stylesheet" type="text/css">
+	<!-- Font Awesome 5.15.1 CSS -->
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
 	<title>Ty The Garden Guy</title>
 </head>
 
@@ -248,3 +250,29 @@ Listing is for 4, 8 or 12 - 1 inch roots
 
 
 </body>
+<!--footer-->
+<footer class="footer">
+    <!-- HTML for the social media buttons -->
+	<div id="socialbuttons">
+	  <a href="https://www.instagram.com/tythegardenguy/" target="_blank" class="instagram">
+		<i class="fab fa-instagram"></i>
+	  </a>
+	  <a href="https://www.tiktok.com/@tythegardenguy" target="_blank" class="tiktok">
+		<i class="fab fa-tiktok"></i>
+	  </a>
+	  <a href="https://discord.com/invite/EWE4DyJZ8z" target="_blank" class="discord">
+		<i class="fab fa-discord"></i>
+	  </a>
+	</div>
+
+    <ul class="nav">
+                <li class= "tab"><a href="index.html">Home</a></li>
+                <li class="tab"><a href="services.html">Services</a></li>
+				<li class="tab active"><a href="products.html">Products</a></li>
+				<li class="tab"><a href="contact.html">Contact</a></li>
+            </ul>
+    <p>&copy;2023 Ty the Garden Guy | All Rights Reserved</p>
+	<!-- Privacy policy link -->
+	<a href="https://www.privacypolicytemplate.net/live.php?token=QTzwqr5AEFlSb2psLfWgBDQtALKJqX3D" target="_blank" id="privacy-policy-link">Privacy Policy</a>
+</footer>
+</html>
